# printf

./: .main.c.swp  CMakeLists.txt  Makefile  a.out  apply_fields.c  apply_lc_c.c  apply_ls_s_part_1.c  apply_ls_s_part_2.c  apply_precision_group1.c  apply_precision_group2.c  apply_precision_group3.c  apply_width_group1.c  apply_width_group2.c  apply_width_group3.c  apply_wtp_1_2_4.c  apply_zero_conditions.c  apply_zero_conditions_1.c  apply_zero_conditions_2.c  assist_functions.c  assist_functions_1.c  assist_functions_2.c  find_arg_group1.c  find_arg_group1_len_0.c  find_arg_group1_len_1_2.c  find_arg_group2.c  find_arg_group2_len_0_1.c  find_arg_group2_len_2.c  find_arg_group3.c  find_fields.c  find_fields_1.c  find_fields_2.c  find_fields_3.c  ft_apply_fields.c  ft_apply_precision.c  ft_copy_fields.c  ft_count_printed_char.c  ft_find_arg_type.c  ft_find_fields.c  ft_find_percents.c  ft_functions_libft.c  (+23 more)
